--- a/Bandroid/app/src/main/res/layout/now_playing.xml
+++ b/Bandroid/app/src/main/res/layout/now_playing.xml
@@ -4,8 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:background="@color/black_background"
     android:orientation="vertical">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black_background">
+
+        <Button
+            android:id="@+id/toLibrary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="@string/back_to_library" />
+
+        <Button
+            android:id="@+id/toAlbum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="@string/back_to_album" />
+
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/image"
@@ -26,7 +49,6 @@
             android:id="@+id/song_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:textAppearance="?android:textAppearanceLarge"
             android:textColor="@android:color/white"
@@ -39,7 +61,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/song_text_view"
-            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:textAppearance="?android:textAppearanceLarge"
             android:textColor="@android:color/white"
@@ -51,7 +72,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/song_text_view"
-            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:textAppearance="?android:textAppearanceSmall"
             android:textColor="@android:color/white"
@@ -62,7 +82,7 @@
             android:id="@+id/play"
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
-            android:layout_weight="1"
+            android:contentDescription="@string/playing"
             android:gravity="center"
             android:src="@drawable/ic_play_arrow"
             tools:layout_margin="@dimen/margin_spacing" />
@@ -71,9 +91,10 @@
             android:id="@+id/pause"
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
-            android:layout_weight="1"
+            android:contentDescription="@string/paused"
             android:gravity="center"
             android:src="@drawable/ic_pause"
             tools:layout_margin="@dimen/margin_spacing" />
+
     </LinearLayout>
 </LinearLayout>
