--- a/NewsReaderV2/app/src/main/res/layout/news_list_item.xml
+++ b/NewsReaderV2/app/src/main/res/layout/news_list_item.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/section"
         android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_height="60dp"
         android:layout_gravity="center_vertical"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
@@ -36,8 +36,17 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/textColorHeadline"
-            android:textSize="14sp"
+            android:textSize="12sp"
             tools:text="@string/headline_placeholder" />
+
+        <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:textColor="@color/textColorAuthor"
+            android:textSize="8sp"
+            tools:text="@string/author_goes_here" />
 
     </LinearLayout>
 
