--- a/NewsReaderV2/app/src/main/res/menu/main.xml
+++ b/NewsReaderV2/app/src/main/res/menu/main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.quakereport.NewsActivity">
+    tools:context="com.example.android.newsreaderv2.NewsActivity">
     <item
         android:id="@+id/action_settings"
         android:title="@string/settings_menu_item"
