News Reader V2 after implementing code review suggestions

--- a/NewsReaderV2/app/src/main/res/xml/settings_main.xml
+++ b/NewsReaderV2/app/src/main/res/xml/settings_main.xml
@@ -17,4 +17,11 @@
         android:selectAllOnFocus="true"
         android:title="@string/settings_number_of_articles_label" />
 
+    <EditTextPreference
+        android:defaultValue="@string/settings_choose_topic_default"
+        android:inputType="textAutoCorrect"
+        android:key="@string/settings_choose_topic_key"
+        android:selectAllOnFocus="true"
+        android:title="@string/settings_choose_topic_label" />
+
 </PreferenceScreen>
