--- a/BookStoreV2/app/src/main/res/layout/list_item.xml
+++ b/BookStoreV2/app/src/main/res/layout/list_item.xml
@@ -40,9 +40,10 @@
         tools:text="Quantity"/>
 
     <Button
-        android:id="@+id/saleButton"
+        android:id="@+id/sale_Btn"
         android:text="Sell 1"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:focusable="false"/>
 </RelativeLayout>
