--- a/BookStoreV2/app/src/main/res/layout/activity_editor.xml
+++ b/BookStoreV2/app/src/main/res/layout/activity_editor.xml
@@ -66,7 +66,7 @@
                 <EditText
                     android:id="@+id/edit_book_quantity"
                     android:hint="@string/hint_book_quantity"
-                    android:inputType="textCapWords"
+                    android:inputType="number"
                     style="@style/EditorFieldStyle" />
 
             </LinearLayout>
